niveau de battery, fix affichage text donnée

--- a/ErabliereIU/src/donnees/sub-panel/capteur-pannels.component.html
+++ b/ErabliereIU/src/donnees/sub-panel/capteur-pannels.component.html
@@ -34,6 +34,7 @@
         <graph-pannel [titre]="capteur.nom"
                       [symbole]="capteur.symbole"
                       [idCapteur]="capteur.id"
+                      [batteryLevel]="capteur.batteryLevel"
                       [ajouterDonneeDepuisInterface]="capteur.ajouterDonneeDepuisInterface"></graph-pannel>
     </div>
     }
