--- a/ErabliereIU/src/notes/ajouter-note.component.html
+++ b/ErabliereIU/src/notes/ajouter-note.component.html
@@ -86,6 +86,7 @@
             <option value="Aucune">Aucune</option>
             <option value="annuel">Annuel</option>
             <option value="mensuel">Mensuel</option>
+            <option value="bihebo">Bihebomadaire</option>
             <option value="hebdo">Hebdomadaire</option>
             <option value="quotidien">Quotidien</option>
           </select>
