--- a/ErabliereIU/src/notes/modifier-note.component.html
+++ b/ErabliereIU/src/notes/modifier-note.component.html
@@ -80,6 +80,7 @@
             <option value="Aucune">Aucune</option>
             <option value="annuel">Annuel</option>
             <option value="mensuel">Mensuel</option>
+            <option value="bihebo">Bihebdomadaire</option>
             <option value="hebdo">Hebdomadaire</option>
             <option value="quotidien">Quotidien</option>
           </select>
