fix three sonarling warning and add promote image step in workflows

--- a/ErabliereIU/src/notes/ajouter-note.component.html
+++ b/ErabliereIU/src/notes/ajouter-note.component.html
@@ -105,9 +105,8 @@
       @if (uploadInProgress) {
         <div>
           <span class="text-success">Téléchargement en cours... Total: {{totalSize}} Mb</span>
-          <!-- add a spinner to indicate the user the upload is in progress -->
-          <div class="spinner-border text-success" role="status">
-            <span class="visually-hidden">Loading...</span>
+          <div class="spinner-border text-success">
+            <span class="visually-hidden">Chargement...</span>
           </div>      
         </div>
       }
