--- a/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
+++ b/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
@@ -3,59 +3,61 @@
         <h2>Érablière IU</h2>
     </div>
     <div class="col-lg-10">
-        <button class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target=".navbar-collapse"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse d-lg-inline-flex flex-lg-row">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                     @if (idErabliereSelectionee) {
-                    <a
-                        class="nav-link ps-0"
-                        routerLink="/e/{{idErabliereSelectionee}}/graphiques"
-                        routerLinkActive="active"
-                        ariaCurrentWhenActive="page">
+                    <a class="nav-link ps-0" routerLink="/e/{{idErabliereSelectionee}}/graphiques"
+                        routerLinkActive="active" ariaCurrentWhenActive="page">
                         Graphiques
                     </a>
                     } @else {
-                    <a
-                        class="nav-link"
-                        routerLink="e"
-                        routerLinkActive="active"
-                        ariaCurrentWhenActive="page">
+                    <a class="nav-link" routerLink="e" routerLinkActive="active" ariaCurrentWhenActive="page">
                         Graphiques
                     </a>
                     }
-                    </li>
-                @for (url of urls; track url) {
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url.href }}" role="button" target="_blank" rel="noopener noreferrer">{{ url.text }}</a>
                 </li>
+                @for (url of urls; track url) {
+                @if (url.requiredLogin && isLoggedIn) {
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url.href }}" role="button" target="_blank" rel="noopener noreferrer">{{
+                        url.text }}</a>
+                </li>
+                }
                 }
                 @if (isLoggedIn && thereIsAtLeastOneErabliere) {
                 <li class="nav-item">
-                    <a id="nav-menu-alerte-button" class="nav-link" routerLink="e/{{idErabliereSelectionee}}/alertes" routerLinkActive="active" ariaCurrentWhenActive="page">
+                    <a class="nav-link" routerLink="e/{{idErabliereSelectionee}}/capteurs" routerLinkActive="active"
+                        ariaCurrentWhenActive="page">
+                        Capteurs</a>
+                </li>
+                <li class="nav-item">
+                    <a id="nav-menu-alerte-button" class="nav-link" routerLink="e/{{idErabliereSelectionee}}/alertes"
+                        routerLinkActive="active" ariaCurrentWhenActive="page">
                         Alertes
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a id="nav-menu-notes-button" class="nav-link" routerLink="e/{{idErabliereSelectionee}}/notes" routerLinkActive="active" ariaCurrentWhenActive="page">
+                    <a id="nav-menu-notes-button" class="nav-link" routerLink="e/{{idErabliereSelectionee}}/notes"
+                        routerLinkActive="active" ariaCurrentWhenActive="page">
                         Notes
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="e/{{idErabliereSelectionee}}/documentation" routerLinkActive="active" ariaCurrentWhenActive="page">
+                    <a class="nav-link" routerLink="e/{{idErabliereSelectionee}}/documentation"
+                        routerLinkActive="active" ariaCurrentWhenActive="page">
                         Documentation
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="e/{{idErabliereSelectionee}}/capteurs" routerLinkActive="active"
-                       ariaCurrentWhenActive="page">Capteurs</a>
+                    <a class="nav-link" routerLink="e/{{idErabliereSelectionee}}/rapports" routerLinkActive="active"
+                        ariaCurrentWhenActive="page">
+                        Rapports
+                    </a>
                 </li>
                 }
                 <li class="nav-item">
@@ -66,7 +68,8 @@
             </ul>
             <div class="d-flex gap-2">
                 @if (!useAuthentication || isAdminUser) {
-                <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="/admin">Érablière Admin</button>
+                <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="/admin">Érablière
+                    Admin</button>
                 }
                 @if (useAuthentication) {
                 @if (callFeatureEnable && callFeatureEnableForUser) {
@@ -74,7 +77,7 @@
                 }
                 <connection-button (loginChange)="onLoginChange($event)" />
                 }
-          </div>
+            </div>
         </div>
     </div>
 </nav>
