--- a/ErabliereIU/src/rapport/degreejour/rapport-degre-jour.component.html
+++ b/ErabliereIU/src/rapport/degreejour/rapport-degre-jour.component.html
@@ -1,61 +1,70 @@
 <h4>Degré jour</h4>
 
-<form #rapportDegresJourForm="ngForm">
+<form>
     <span class="text-danger">
         {{generalError}}
     </span>
     <div class="form-group">
         <label for="dateDebut">Date de début</label>
-        <einput
+        <input
+            name="dateDebut"
             type="date"
             class="form-control"
             id="dateDebut"
-            formControlName="dateDebut" />
+            value="{{form.dateDebut}}"
+            [(ngModel)]="form.dateDebut" />
         <input-error 
-            errorObj="errorObj"
-            controlName="dateDebut"></input-error>
+            [errorObj]="errorObj"
+            [controlName]="'dateDebut'"></input-error>
     </div>
     <div class="form-group">
         <label for="dateFin">Date de fin</label>
-        <einput
+        <input
+            name="dateFin"
             type="date"
             class="form-control"
             id="dateFin"
-            formControlName="dateFin" />
+            value="{{form.dateFin}}"
+            [(ngModel)]="form.dateFin" />
         <input-error
-            errorObj="errorObj"
-            controlName="dateFin"></input-error>
+            [errorObj]="errorObj"
+            [controlName]="'dateFin'"></input-error>
     </div>
     <div class="form-group">
         <label for="idCapteur">Capteur</label>
-        <select class="form-control" id="idCapteur" formControlName="idCapteur">
-            <option *ngFor="let capteur of capteurs" [value]="capteur.id">{{capteur.nom}}</option>
+        <select name="idCapteur" class="form-control" id="idCapteur" (change)="idCapteurChanged($event)">
+            <option value="">Sélectionner un capteur</option>
+            <option 
+                *ngFor="let capteur of capteurs" 
+                [value]="capteur.id">{{capteur.nom}}</option>
         </select>
         <input-error
-            errorObj="errorObj"
-            controlName="idCapteur"></input-error>
+            [errorObj]="errorObj"
+            [controlName]="'idCapteur'"></input-error>
     </div>
     <div class="form-group">
         <label for="utiliserTrioDonnees">Utiliser temperature depuis trio de données</label>
-        <einput
+        <input
+            name="utiliserTrioDonnees"
             type="checkbox"
-            class="form-control"
+            class="form-control-checkbox"
             id="utiliserTrioDonnees"
-            formControlName="utiliserTrioDonnees" />
+            [(ngModel)]="form.utiliserTemperatureTrioDonnee" />
         <input-error
-            errorObj="errorObj"
-            controlName="utiliserTrioDonnees"></input-error>
+            [errorObj]="errorObj"
+            [controlName]="'utiliserTrioDonnees'"></input-error>
     </div>
     <div class="form-group">
-        <label for="temperatureBase">Température de base</label>
-        <einput
+        <label for="seuil">Seuil</label>
+        <input
+            name="seuil"
             type="number"
             class="form-control"
-            id="temperatureBase"
-            formControlName="temperatureBase" />
+            id="seuil"
+            [(ngModel)]="form.seuilTemperature" />
         <input-error
-            errorObj="errorObj"
-            controlName="temperatureBase"></input-error>
+            [errorObj]="errorObj"
+            [controlName]="'seuil'"></input-error>
     </div>
     <span 
         class="btn btn-primary" 
@@ -74,9 +83,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let degreJour of degresJours?.rapports">
+                <tr *ngFor="let degreJour of degresJours?.rapport">
                     <td>{{degreJour.date}}</td>
-                    <td>{{degreJour.degresJours}}</td>
+                    <td>{{degreJour.temperature}}</td>
+                    <td>{{degreJour.degreJour}}</td>
                 </tr>
             </tbody>
         </table>
