--- a/ErabliereIU/src/admin/admin-customers/customer-list/customer-list.component.html
+++ b/ErabliereIU/src/admin/admin-customers/customer-list/customer-list.component.html
@@ -5,6 +5,8 @@
                 <th class="min"></th>
                 <th>Nom</th>
                 <th>Email</th>
+                <th>Première utilisation</th>
+                <th>Dernière utilisation</th>
                 <th>Nombre d'érablières</th>
                 <th class="min"></th>
             </tr>
@@ -13,7 +15,7 @@
             @for (customer of customers; track customer.id) {
             <tr>
                 <td class="min">
-                    <button class="btn btn-secondary" (click)="toggleAccess(customer.id)">
+                    <button class="btn btn-secondary" (click)="toggleAccess(customer.id)" title="Afficher les accès">
                         @if (showAccess[customer.id]) {
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708z"/>
@@ -25,8 +27,10 @@
                         }
                     </button>
                 </td>
-                <td>{{customer.name}}</td>
+                <td><span title="Type de compte: {{customer.accountType}}">{{customer.name}}</span></td>
                 <td>{{customer.email}}</td>
+                <td><span title="{{ formatMessageDate(customer.creationTime) }}">{{customer.creationTime | date: 'yyyy-MM-dd' }}</span></td>
+                <td><span title="{{ formatMessageDate(customer.lastAccessTime) }}">{{customer.lastAccessTime | date: 'yyyy-MM-dd' }}</span></td>
                 <td>{{customer.customerErablieres?.length}}</td>
                 <td class="min">
                     <button
