--- a/ErabliereIU/src/admin/admin-erablieres/admin-erablieres.component.html
+++ b/ErabliereIU/src/admin/admin-erablieres/admin-erablieres.component.html
@@ -8,7 +8,7 @@
         </modifier-erabliere-modal>
     }
 
-    <div class="container">
+    <div class="container-fluid">
         <erabliere-list
             [erablieres]="erablieres"
             (erabliereASupprimer)="supprimerErabliere($event)"
