create a field for user timezone

--- a/ErabliereIU/src/app/admin-view/admin-nav-bar/admin-nav-bar.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-nav-bar/admin-nav-bar.component.html
@@ -16,7 +16,7 @@
                 <li class="nav-item">
                     <a
                         class="nav-link ps-0"
-                        routerLink="/admin/customers"
+                        routerLink="/a/customers"
                         routerLinkActive="active"
                         ariaCurrentWhenActive="page"
                     >
@@ -26,11 +26,21 @@
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        routerLink="/admin/erablieres"
+                        routerLink="/a/erablieres"
                         routerLinkActive="active"
                         ariaCurrentWhenActive="page"
                     >
                         Érablières
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a
+                        class="nav-link"
+                        routerLink="/a/apikeys"
+                        routerLinkActive="active"
+                        ariaCurrentWhenActive="page"
+                    >
+                        Clé d'API
                     </a>
                 </li>
             </ul>
