improve dashboard related to sensor status

--- a/ErabliereIU/src/donnees/sub-panel/capteur-pannels.component.html
+++ b/ErabliereIU/src/donnees/sub-panel/capteur-pannels.component.html
@@ -35,6 +35,7 @@
                       [symbole]="capteur.symbole"
                       [idCapteur]="capteur.id"
                       [batteryLevel]="capteur.batteryLevel"
+                      [online]="capteur.online"
                       [ajouterDonneeDepuisInterface]="capteur.ajouterDonneeDepuisInterface"></graph-pannel>
     </div>
     }
