fix écriture dans à propos

--- a/ErabliereIU/src/apropos/apropos.component.html
+++ b/ErabliereIU/src/apropos/apropos.component.html
@@ -3,8 +3,8 @@
     <hr />
 
     <div *ngIf="demoMode" class="bg-warning p-1" style="border-radius: 5px;">
-        <h4>Vous utilisez la version Demo de ErabliereAPI.</h4>
-        <p>La version démo est limité en fonctionnalité et les données ne sont pas enregistrer dans une base de données et seront perdu après un certain temps.</p>
+        <h4>Vous utilisez la version démo de ÉrablièreAPI.</h4>
+        <p>La version démo est limité en fonctionnalité et les données ne sont pas enregistré dans une base de données. Les données seront perdu après un certain temps.</p>
         <p *ngIf="realAppUrl">Vous pouvez trouver l'application officiel à <a href="{{realAppUrl}}">{{realAppUrl}}</a>.</p>
     </div>
 
