--- a/ErabliereIU/src/erablieres/erabliere.component.html
+++ b/ErabliereIU/src/erablieres/erabliere.component.html
@@ -11,8 +11,7 @@
             @if (erabliere?.codePostal?.trim() && erabliere?.afficherPredictionMeteoHeure) {
             <hourly-weather-forecast
                 class="col-md-6"
-                style="max-height: 250px; overflow-y: auto; overflow-x: auto;"
-                [erabliere]="erabliere">
+                style="max-height: 250px; overflow-y: auto; overflow-x: auto;">
             </hourly-weather-forecast>
             }
             @if (displayImages) {
