update app nav menu to be closer to bootstrap documentation, fix placement of collapse button

--- a/ErabliereIU/src/app/admin-view/admin-view.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-view.component.html
@@ -1,4 +1,4 @@
-<header class="container-fluid py-2 mb-2 border-bottom">
+<header class="mb-2 border-bottom">
     <admin-nav-bar />
 </header>
 <main class="container-fluid">
