--- a/ErabliereIU/src/app/client-view/client-view.component.html
+++ b/ErabliereIU/src/app/client-view/client-view.component.html
@@ -1,4 +1,4 @@
-<header class="container-fluid py-2 mb-2 border-bottom">
+<header class="mb-2 border-bottom">
     <client-nav-bar
         [idErabliereSelectionee]="idErabliereSelectionee"
         [thereIsAtLeastOneErabliere]="thereIsAtLeastOneErabliere"
