--- a/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
+++ b/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-expand-lg row">
-    <div class="col-lg-2">
-        <h2>Érablière IU</h2>
-    </div>
-    <div class="col-lg-10">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" routerLinkActive="active" ariaCurrentWhenActive="page">
+            <img src="favicon.ico" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+            ÉrablièreIU
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
