avancement vers les endpoint données capteur v2

--- a/ErabliereIU/src/donnees/sub-panel/graph-pannel.component.html
+++ b/ErabliereIU/src/donnees/sub-panel/graph-pannel.component.html
@@ -60,6 +60,12 @@
                     </div>
 
                     <span class="ms-2 mt-2">{{ textActuel }}</span>
+
+                    @if (errorMessage) {
+                        <span class="text-danger">
+                            {{ errorMessage }}
+                        </span>
+                    }
                 </div>
             </div>
             @if (ajouterDonneeDepuisInterface) {
