--- a/ErabliereIU/src/donnees/sub-panel/capteur-pannels.component.html
+++ b/ErabliereIU/src/donnees/sub-panel/capteur-pannels.component.html
@@ -36,7 +36,7 @@
                       [idCapteur]="capteur.id"
                       [batteryLevel]="capteur.batteryLevel"
                       [online]="capteur.online"
-                      [ajouterDonneeDepuisInterface]="capteur.ajouterDonneeDepuisInterface"></graph-pannel>
+                      [ajouterDonneeDepuisInterface]="isLogged && capteur.ajouterDonneeDepuisInterface"></graph-pannel>
     </div>
     }
 </div>
