--- a/ErabliereIU/src/donnees/sub-panel/image-pannel.component.html
+++ b/ErabliereIU/src/donnees/sub-panel/image-pannel.component.html
@@ -26,7 +26,8 @@
                     style="width: 100%; height: 100%;" 
                     data-bs-toggle="modal" 
                     data-bs-target="#imageModal" 
-                    (click)="selectImage(image, ls)">
+                    (click)="selectImage(image, ls)"
+                    (keyup)="imgOnKeyUp($event, image, ls)">
             </div>
         </div>
     </div>
