--- a/ErabliereIU/src/erablieres/erabliere.component.html
+++ b/ErabliereIU/src/erablieres/erabliere.component.html
@@ -25,7 +25,7 @@
         </donnees-panel>
         }
         @if (displayCapteurs) {
-        <capteur-pannels [capteurs]="erabliere?.capteurs" [erabliere]="erabliere"></capteur-pannels>
+        <capteur-panels [capteurs]="erabliere?.capteurs" [erabliere]="erabliere"></capteur-panels>
         }
         @if (erabliere?.afficherSectionBaril) {
         <barils-panel [erabliereId]="erabliere?.id"></barils-panel>
