ajouter une carte mapbo activable via variable d'environnement

--- a/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
+++ b/ErabliereIU/src/app/client-view/client-nav-bar/client-nav-bar.component.html
@@ -68,6 +68,9 @@
                 </li>
             </ul>
             <div class="d-flex gap-2">
+                @if (mapFeatureEnable) {
+                <button id="zone-carte-button" class="btn btn-primary" routerLink="/map">Carte</button>
+                }
                 @if (!useAuthentication || isAdminUser) {
                 <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="/a">Érablière
                     Admin</button>
