--- a/ErabliereIU/src/erablieres/erabliere-form.component.html
+++ b/ErabliereIU/src/erablieres/erabliere-form.component.html
@@ -16,6 +16,18 @@
             <input-error [errorObj]="errorObj" [controlName]="'codePostal'"></input-error>
         </div>
         <div class="form-group">
+            <label class="form-label" for="longitude">Longitude</label>
+            <input type="text" class="form-control" id="longitude" name="longitude" rows="3" placeholder="Longitude"
+                   [(ngModel)]="erabliere.longitude">
+            <input-error [errorObj]="errorObj" [controlName]="'longitude'"></input-error>
+        </div>
+        <div class="form-group">
+            <label class="form-label" for="latitude">Latitude</label>
+            <input type="text" class="form-control" id="latitude" name="latitude" rows="3" placeholder="Latitude"
+                   [(ngModel)]="erabliere.latitude">
+            <input-error [errorObj]="errorObj" [controlName]="'latitude'"></input-error>
+        </div>
+        <div class="form-group">
             <label class="form-label" for="ipRule">Règle IP</label>
             <input type="text" class="form-control" id="ipRule" name="ipRule" rows="3" placeholder="Règle IP"
                    [(ngModel)]="erabliere.ipRule">
